<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data >
		<variable name="vm" type="tipcalculator.eoinahern.ie.tipcalculator.viewmodel.CalculatorViewModel"/>
	</data>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/calculation_inputs"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:context=".view.MainActivity"
		android:layout_margin="8dp"
		android:paddingBottom="26dp"
		tools:showIn="@layout/activity_main">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_check_amount"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<EditText
				android:id="@+id/input_check_amount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/input_check_amount_hint"
				android:inputType="numberDecimal"
				android:selectAllOnFocus="true"
				android:text="@={vm.inputCheckAmount}" />


		</android.support.design.widget.TextInputLayout>


		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_tip_percent"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount">

			<EditText
				android:id="@+id/input_tip_percent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/tip_percent_hint"
				android:inputType="number"
				android:selectAllOnFocus="true"
				android:text="@={vm.inputTipPercent}" />


		</android.support.design.widget.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:id="@+id/calc_outputs"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:paddingTop="16dp"
			android:orientation="horizontal"
			app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_weight="1">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/TextAppearance.AppCompat.Large"
					android:id="@+id/bill_amount"
					android:textAlignment="center"
					android:text="@{vm.outputCheckAmount}" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/bill_amount_label"
					style="@style/TextAppearance.AppCompat.Large"
					android:textAlignment="center"
					android:text="@string/bill_amount_label" />


			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_weight="1">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/TextAppearance.AppCompat.Large"
					android:id="@+id/tip_amount"
					android:textAlignment="center"
					android:text="@{vm.outputTipAmount}" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/tip_amount_label"
					style="@style/TextAppearance.AppCompat.Large"
					android:textAlignment="center"
					android:text="@string/tim_label" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_weight="1">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/grand_total"
					style="@style/TextAppearance.AppCompat.Large"
					android:textAlignment="center"
					android:text="@{vm.outputTotalDollarAmount}" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/grand_total_label"
					style="@style/TextAppearance.AppCompat.Large"
					android:textAlignment="center"
					android:text="@string/grand_total_label" />


			</LinearLayout>


		</LinearLayout>

	</android.support.constraint.ConstraintLayout>
</layout>